Fix group icons on ie

--- a/gatling-charts/src/main/resources/assets/style/style.css
+++ b/gatling-charts/src/main/resources/assets/style/style.css
@@ -232,7 +232,7 @@ h1 span {
 }
 
 .nav .item {
-	padding: 5px 0px 5px 10px;
+	padding: 5px 0px 5px 0px;
 	display: block;
 	margin: 0 auto
 }
